--- a/PrzyjazneEmocje/app/src/main/res/values/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">PrzyjazneEmocje</string>
     <string name="newPhoto">Zrób nowe</string>
+    <string name="text_choose">Wybierz zdjęcia</string>
+    <string name="label_choose_images">Wybierz</string>
+    <string name="title_choose_img">Wybierz zdjęcia</string>
 </resources>
