--- a/PrzyjazneEmocje/app/src/main/res/values/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="text_choose">Wybierz zdjęcia</string>
     <string name="label_choose_images">Wybierz</string>
     <string name="title_choose_img">Wybierz zdjęcia</string>
+
+
+
+        <string-array name="spinner">
+            <item>Videos</item>
+            <item>Photos</item>
+        </string-array>
+
+
 </resources>
