--- a/PrzyjazneEmocje/app/src/main/res/values-en/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values-en/strings.xml
@@ -11,6 +11,8 @@
     <string name="label_emotion">Learn emotions:</string>
     <string name="level_name">New level</string>
     <string name="label_level_name">Level name: </string>
+    <string name="label_level_list">Levels list: </string>
+
 
     <string name="emotion_happy">happy</string>
     <string name="emotion_sad">sad</string>
