--- a/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
@@ -4,13 +4,14 @@
     <string name="label_choose_images">Wybierz</string>
     <string name="title_choose_img">Wybierz zdjęcia</string>
     <string name="default_message">Nie wybrano zdjęć</string>
-    <string name="save_message">Zapisano level</string>
+    <string name="save_message">Zapisano poziom</string>
     <string name="select">wybrano</string>
     <string name="pv_per_level">Zdjęcia/filmy na poziom</string>
     <string name="time_limit">Limit czasu</string>
     <string name="label_emotion">Uczone emocje:</string>
     <string name="level_name">Nowy poziom</string>
     <string name="label_level_name">Nazwa poziomu: </string>
+    <string name="label_level_list">Lista poziomów: </string>
 
     <string name="emotion_happy">wesoły</string>
     <string name="emotion_sad">smutny</string>
