--- a/GraPrzyjazneEmocje/app/src/main/res/values-en/strings.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/values-en/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Frendly Emotions - Game</string>
+    <string name="label_show_emotion">Choose</string>
+    <string name="label_congratulations">Congratulations!</string>
+    <string name="label_rightAnswers">Right answers:</string>
+    <string name="label_wrongAnswers">Wrong answers:</string>
+    <string name="emotion_happy">happy</string>
+    <string name="emotion_sad">sad</string>
+    <string name="emotion_surprised">surprised</string>
+    <string name="emotion_angry">angry</string>
+    <string name="emotion_scared">scared</string>
+    <string name="emotion_bored">bored</string>
 </resources>
