--- a/GraPrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
@@ -1,3 +1,13 @@
 <resources>
 <string name="app_name">Gra Przyjazne Emocje</string>
+    <string name="label_show_emotion">Pokaż, gdzie</string>
+    <string name="label_congratulations">Gratulacje!</string>
+    <string name="label_rightAnswers">Poprawne odpowiedzi:</string>
+    <string name="label_wrongAnswers">Niepoprawne odpowiedzi:</string>
+    <string name="emotion_happy">wesoły</string>
+    <string name="emotion_sad">smutny</string>
+    <string name="emotion_surprised">zdziwiony</string>
+    <string name="emotion_angry">zły</string>
+    <string name="emotion_scared">przestraszony</string>
+    <string name="emotion_bored">znudzony</string>
 </resources>
