--- a/GraPrzyjazneEmocje/app/src/main/res/values-en/strings.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/values-en/strings.xml
@@ -4,6 +4,7 @@
     <string name="label_congratulations">Congratulations!</string>
     <string name="label_rightAnswers">Right answers:</string>
     <string name="label_wrongAnswers">Wrong answers:</string>
+    <string name="label_timeout">Timeouts:</string>
     <string name="emotion_happy">happy</string>
     <string name="emotion_sad">sad</string>
     <string name="emotion_surprised">surprised</string>
