--- a/GraPrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
@@ -4,6 +4,7 @@
     <string name="label_congratulations">Gratulacje!</string>
     <string name="label_rightAnswers">Poprawne odpowiedzi:</string>
     <string name="label_wrongAnswers">Niepoprawne odpowiedzi:</string>
+    <string name="label_timeout">Poziomy, w których czas upłynął:</string>
     <string name="emotion_happy">wesoły</string>
     <string name="emotion_sad">smutny</string>
     <string name="emotion_surprised">zdziwiony</string>
