--- a/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
@@ -12,6 +12,8 @@
     <string name="level_name">Nowy poziom</string>
     <string name="label_level_name">Nazwa poziomu: </string>
     <string name="label_level_list">Lista poziomów: </string>
+    <string name="active">aktywny </string>
+
 
     <string name="emotion_happy">wesoły</string>
     <string name="emotion_sad">smutny</string>
