--- a/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
@@ -13,7 +13,8 @@
     <string name="label_level_name">Nazwa poziomu: </string>
     <string name="label_level_list">Lista poziomów: </string>
     <string name="active">aktywny </string>
-
+    <string name="correctness">Poprawność</string>
+    <string name="sublevels">Podpoziomy</string>
 
     <string name="emotion_happy">wesoły</string>
     <string name="emotion_sad">smutny</string>
@@ -22,10 +23,10 @@
     <string name="emotion_scared">przestraszony</string>
     <string name="emotion_bored">znudzony</string>
 
-    <string-array name="spinner">
+    <array name="spinner">
         <item>Zdjęcia</item>
         <item>Filmy</item>
-    </string-array>
+    </array>
 
 
 </resources>
