Dokończenie subleveli i correctness.

--- a/PrzyjazneEmocje/app/src/main/res/values-en/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values-en/strings.xml
@@ -13,7 +13,7 @@
     <string name="label_level_name">Level name: </string>
     <string name="label_level_list">Levels list: </string>
     <string name="active">active </string>
-    <string name="correctness">Correctness</string>
+    <string name="correctness">Correctness (%)</string>
     <string name="sublevels">Sublevels</string>
 
     <string name="emotion_happy">happy</string>
