--- a/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values-pl/strings.xml
@@ -13,7 +13,7 @@
     <string name="label_level_name">Nazwa poziomu: </string>
     <string name="label_level_list">Lista poziomów: </string>
     <string name="active">aktywny </string>
-    <string name="correctness">Poprawność</string>
+    <string name="correctness">Poprawność (%)</string>
     <string name="sublevels">Podpoziomy</string>
 
     <string name="emotion_happy">wesoły</string>
