częściowe - widok gdy niezaliczony poziom

--- a/GraPrzyjazneEmocje/app/src/main/res/values-en/strings.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/values-en/strings.xml
@@ -11,4 +11,6 @@
     <string name="emotion_angry">angry</string>
     <string name="emotion_scared">scared</string>
     <string name="emotion_bored">bored</string>
+
+    <string name="failed_level">Unfortunately, you need a better score to pass this level.</string>
 </resources>
