--- a/PrzyjazneEmocje/app/src/main/res/values-en/strings.xml
+++ b/PrzyjazneEmocje/app/src/main/res/values-en/strings.xml
@@ -6,14 +6,14 @@
     <string name="default_message">No photos selected</string>
     <string name="save_message">Level saved</string>s
     <string name="select">select</string>
-    <string name="pv_per_level">Photos/Videos per level</string>
+    <string name="pv_per_level">Photos per level</string>
     <string name="time_limit">Time Limit</string>
     <string name="label_emotion">Learn emotions:</string>
     <string name="level_name">New level</string>
     <string name="label_level_name">Level name: </string>
     <string name="label_level_list">Levels list: </string>
     <string name="active">active </string>
-    <string name="correctness">Correctness (%)</string>
+    <string name="correctness">Correctness</string>
     <string name="sublevels">Sublevels</string>
 
     <string name="emotion_happy">happy</string>
